Java 9-fastdebug ia32 Error: Unimplemented with "-XX:CompilationPolicyChoice=1 -XX:-TieredCompilation" options

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b73
    • x86

        Also, 32 bit platform build(Linux-i586) product build catch internal error("Error: Unimplemented()") when ran in client mode and with "-XX:CompilationPolicyChoice=1":
        java -client -XX:CompilationPolicyChoice=1

        Here are output for Java 9 b61 product build for Linux-i586 platform:
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (compilationPolicy.cpp:66), pid=22658, tid=4137761600
        # Error: Unimplemented()
        #
        # JRE version: (9.0-b61) (build )
        # Java VM: Java HotSpot(TM) Client VM (1.9.0-ea-b61 mixed mode, sharing linux-x86 )
        ...

        Java 8u45 are also affected(hs_err_pid22418.log is attached)

              Assignee:
              Igor Veresov
              Reporter:
              Nils Eliasson (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: